[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ry-testkit"
version = "0.1.0"
description = "Shared integration test base classes for Redis and Postgres containers"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ross Yeager" }]
dependencies = [
  "psycopg2-binary",
  "redis",
  "testcontainers",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ry_testkit = ["py.typed"]
